# BatteryDEV-Field-Data-Challenge-Template-Public

./: .gitignore  Challenge.md  README.md  requirements.txt
environments/: Dockerfile  docker-compose.yml  environment.yml  jupyter.sh  pyproject.toml
notebooks/: dataload.ipynb
