[tool.poetry]
name = "field_data_bDEV"
version = "0.1.0"
description = ""
authors = ["Raymond Gasper <14928724+rgasper@users.noreply.github.com>",
           "Joachim Schaeffer <63883039+JoachimSchaeffer@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
jupyterlab = "^3.3.2"
flake8 = "^4.0.1"
scikit-learn = "^1.0.2"
gdown = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
